compiler/testData/cli/jvm/internalArgUnrecognizedFeature.out
warning: ATTENTION!
This build uses internal compiler arguments:

-XXLanguage:+UnknownFeature

This mode is strictly prohibited for production use,
as no stability/compatibility guarantees are given on
compiler or generated code. Use it at your own risk!

warning: unknown language feature 'UnknownFeature' in passed internal argument '-XXLanguage:+UnknownFeature'
compiler/testData/cli/jvm/inlineClass.kt:1:1: error: the feature "inline classes" is experimental and should be enabled explicitly
inline class Foo(val x: Int)
^
COMPILATION_ERROR
